# waveshare_amoled_smartwatch

./: .clang-tidy  .clangd  .gitignore  .lvgl-live-preview.json  CMakeLists.txt  Doxyfile  README.md  partitions.csv  sdkconfig.defaults  waveshare_amoled_smartwatch.code-workspace
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: android-ci.yml  build-apk.yml  docs.yml  firmware-ci.yml  release.yml  secret-scan.yml
android-companion/: build.gradle  settings.gradle
android-companion/app/: build.gradle
android-companion/config/detekt/: detekt.yml
components/SensorLib/: CMakeLists.txt  idf_component.yml
components/SensorLib/src/: SensorRTC.h  SensorRTC_POSIX.hpp
components/SensorLib/src/platform/: SensorCommCustomHal.hpp  SensorCommDebug.cpp  SensorCommDebug.hpp  SensorCommEnhanced.hpp  SensorCommStatic.cpp  SensorCommStatic.hpp  SensorLockBase.hpp  SensorSmartLock.hpp
components/SensorLib/src/platform/espidf/: SensorEspIDF_Lock.hpp
components/XPowersLib/: keywords.txt  library.properties
components/ble_chronos/: CMakeLists.txt  ble_chronos.c  ble_chronos.h
components/ui/: CMakeLists.txt  actions.c  actions.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.c  vars.h
components/ui/fonts/: fonts.c  fonts.h  lv_font_montserrat_14_ext.c  lv_font_montserrat_16_ext.c
doxygen-awesome-css/: header.html
main/: CMakeLists.txt  idf_component.yml  waveshare_amoled_smartwatch.cpp
(+19 files in other folders)
